// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paddingLeft renders 0 1`] = `
Array [
  .c0 {
  padding-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingLeft renders function 1`] = `
Array [
  .c0 {
  padding-left: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: has;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: has;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingLeft renders invalid theme path 1`] = `
Array [
  .c0 {
  padding-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingLeft renders negative number 1`] = `
Array [
  .c0 {
  padding-left: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingLeft renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  padding-left: July;
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-left: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  padding-left: July;
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-left: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  padding-left: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-left: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-left: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-left: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-left: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingLeft renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    padding-left: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-left: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    padding-left: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-left: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-left: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-left: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-left: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-left: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-left: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingLeft renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  padding-left: July;
}

@media May {
  .c0 {
    padding-left: August;
  }
}

@media April {
  .c0 {
    padding-left: September;
  }
}

@media January {
  .c0 {
    padding-left: November;
  }
}

@media April {
  .c0 {
    padding-left: August;
  }
}

@media June {
  .c0 {
    padding-left: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  padding-left: July;
}

@media May {
  .c0 {
    padding-left: August;
  }
}

@media April {
  .c0 {
    padding-left: September;
  }
}

@media January {
  .c0 {
    padding-left: November;
  }
}

@media April {
  .c0 {
    padding-left: August;
  }
}

@media June {
  .c0 {
    padding-left: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  padding-left: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-left: November;
  }
}

@media April {
  .c0 {
    padding-left: January;
  }
}

@media January {
  .c0 {
    padding-left: December;
  }
}

@media April {
  .c0 {
    padding-left: April;
  }
}

@media June {
  .c0 {
    padding-left: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-left: November;
  }
}

@media April {
  .c0 {
    padding-left: January;
  }
}

@media January {
  .c0 {
    padding-left: December;
  }
}

@media April {
  .c0 {
    padding-left: April;
  }
}

@media June {
  .c0 {
    padding-left: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingLeft renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    padding-left: July;
  }
}

@media April {
  .c0 {
    padding-left: August;
  }
}

@media January {
  .c0 {
    padding-left: September;
  }
}

@media April {
  .c0 {
    padding-left: November;
  }
}

@media June {
  .c0 {
    padding-left: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    padding-left: July;
  }
}

@media April {
  .c0 {
    padding-left: August;
  }
}

@media January {
  .c0 {
    padding-left: September;
  }
}

@media April {
  .c0 {
    padding-left: November;
  }
}

@media June {
  .c0 {
    padding-left: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-left: January;
  }
}

@media April {
  .c0 {
    padding-left: December;
  }
}

@media January {
  .c0 {
    padding-left: April;
  }
}

@media April {
  .c0 {
    padding-left: May;
  }
}

@media June {
  .c0 {
    padding-left: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-left: January;
  }
}

@media April {
  .c0 {
    padding-left: December;
  }
}

@media January {
  .c0 {
    padding-left: April;
  }
}

@media April {
  .c0 {
    padding-left: May;
  }
}

@media June {
  .c0 {
    padding-left: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingLeft renders postitive number 1`] = `
Array [
  .c0 {
  padding-left: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingLeft renders string 1`] = `
Array [
  .c0 {
  padding-left: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: June;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: June;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingLeft renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`paddingLeft renders valid theme path 1`] = `
Array [
  .c0 {
  padding-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-left: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
